feat: add endpoint to get balance history
